--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.2.61'
+
     
     repositories {
         google()
         jcenter()
     }
+
+    ext {
+        supportVersion = '28.0.0'
+        toolsVersion = '28.0.2'
+        targetVersion = 28
+        kotlin_version = '1.2.70'
+        compileVersion = 28
+        minVersion = 21
+    }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+
+    
     }
-}
 
 allprojects {
     repositories {
