--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext {
+        supportVersion = '28.0.0'
+        toolsVersion = '28.0.3'
+        compileVersion = 28
+        targetVersion = 28
+        minVersion = 19
+        gradlePluginVer = '3.2.1'
+    }
     
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath "com.android.tools.build:gradle:$gradlePluginVer"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
