--- a/build.gradle
+++ b/build.gradle
@@ -2,38 +2,37 @@
 
 buildscript {
 
-    ext {
-        supportVersion = '28.0.0'
-        toolsVersion = '28.0.3'
-        compileVersion = 28
-        targetVersion = 28
-        minVersion = 19
-        gradlePluginVer = '3.2.1'
-      kotlin_version = '1.2.70'
-    }
-    
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:$gradlePluginVer"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+  ext {
+    supportVersion = '28.0.0'
+    toolsVersion = '28.0.3'
+    compileVersion = 28
+    targetVersion = 28
+    minVersion = 19
+    gradlePluginVer = '3.4.0'
+    kotlin_version = '1.3.31'
+  }
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+  repositories {
+    google()
+    jcenter()
+  }
+  dependencies {
+    classpath "com.android.tools.build:gradle:$gradlePluginVer"
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
-
-    }
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
+}
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
+  repositories {
+    google()
+    jcenter()
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
