--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     compileVersion = 28
     targetVersion = 28
     minVersion = 19
-    gradlePluginVer = '3.4.0'
+    gradlePluginVer = '3.5.0-beta04'
     kotlin_version = '1.3.31'
   }
 
