--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,9 +4,10 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: "kotlin-kapt"
 
 ext {
-    version_navigation = "1.0.0"
+    version_navigation = "2.1.0-alpha05"
     version_constraint_layout = "1.1.3"
-    version_lifecycle = "1.1.1"
+    version_lifecycle = "2.0.0"
+    version_design = "1.0.0"
 }
 
 android {
@@ -17,7 +18,7 @@ android {
         targetSdkVersion targetVersion
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -33,17 +34,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:recyclerview-v7:$supportVersion"
-    implementation "com.android.support:design:$supportVersion"
+    implementation "androidx.recyclerview:recyclerview:$version_design"
+    implementation "com.google.android.material:material:$version_design"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
-    implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
-    implementation "com.android.support.constraint:constraint-layout:$version_constraint_layout"
-    implementation "android.arch.lifecycle:extensions:$version_lifecycle"
+    implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
+    implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     implementation project(':library')
 }
