--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -7,7 +7,7 @@ ext {
     version_navigation = "2.1.0-alpha05"
     version_constraint_layout = "1.1.3"
     version_lifecycle = "2.0.0"
-    version_design = "1.0.0"
+    version_design = "1.1.0-alpha06"
 }
 
 android {
