--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,47 +4,47 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: "kotlin-kapt"
 
 ext {
-    version_navigation = "2.1.0-alpha05"
-    version_constraint_layout = "1.1.3"
-    version_lifecycle = "2.0.0"
-    version_design = "1.1.0-alpha06"
+  navigationVersion = '2.1.0-alpha05'
+  constraintVersion = '1.1.3'
+  lifecyclerVersion = '2.0.0'
+  designVersion = '1.1.0-alpha06'
 }
 
 android {
-    compileSdkVersion compileVersion
-    defaultConfig {
-        applicationId "ca.auxility.baseadapter.sample"
-        minSdkVersion minVersion
-        targetSdkVersion targetVersion
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  compileSdkVersion compileVersion
+  defaultConfig {
+    applicationId "ca.auxility.baseadapter.sample"
+    minSdkVersion minVersion
+    targetSdkVersion targetVersion
+    versionCode 1
+    versionName "1.0"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
 
-    dataBinding {
-        enabled = true
-    }
+  dataBinding {
+    enabled = true
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.recyclerview:recyclerview:$version_design"
-    implementation "com.google.android.material:material:$version_design"
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation "androidx.recyclerview:recyclerview:$materialVersion"
+  implementation "com.google.android.material:material:$designVersion"
+  testImplementation "junit:junit:$jUnitVersion"
+  androidTestImplementation "androidx.test.ext:junit:$jUnitTestExtVersion"
+  androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
-    implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
-    implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+  implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+  implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+  implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
+  implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
-    implementation project(':library')
+  implementation project(':library')
 }
