--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,10 @@ buildscript {
     minVersion = 14
     gradlePluginVersion = '3.5.0'
     kotlinVersion = '1.3.31'
+    coroutine_version = '1.3.0-RC2'
     materialVersion = '1.0.0'
     versionerVersion = '0.4.1'
+    lifecycle_version = '2.2.0-alpha04'
     jUnitVersion = '4.12'
     jUnitTestExtVersion = '1.1.1'
     espressoVersion = '3.2.0'
